guides/token-factory/backend/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-factory-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: token-factory
  template:
    metadata:
      labels:
        app: token-factory
    spec:
      containers:
        - name: token-factory
          ports:
            - containerPort: 5000
          image: ghcr.io/klayrhq/klayr-sdk-examples:v0.0.4-token-factory.11
          imagePullPolicy: Always
          # volumeMounts:
          #   - name: storage
          #     mountPath: /root/.klayr
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      # volumes:
      #   - name: storage
      #     persistentVolumeClaim:
      #       claimName: token-factory-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: chain-service
  namespace: default
spec:
  selector:
    app: token-factory
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7887
---
apiVersion: v1
kind: Service
metadata:
  name: chain-faucet
  namespace: default
spec:
  selector:
    app: token-factory
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: chain-service-dashboard
  namespace: default
spec:
  selector:
    app: token-factory
  ports:
    - protocol: TCP
      port: 8800
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: token-factory.klayr.dev
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: chain-service
                port:
                  number: 80
    - host: token-factory-faucet.klayr.dev
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: chain-faucet
                port:
                  number: 8080
    - host: token-factory-dash.klayr.dev
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: chain-service-dashboard
                port:
                  number: 8800
